# rust_snippets

./: .gitignore  README.md
c/src/: dangling_pointer.c  ffi.h  uninitialized.c
minimal_example/: Cargo.toml
minimal_example/src/: lib.rs  main.rs
rust/: Cargo.toml  build.rs
rust/src/: casting.rs  errror_handling.rs  ffi.c  ffi.rs  functions.rs  generics.rs  lib.rs  lifetimes.rs  macros.rs  matching.rs  pyo3.rs  references.rs  safety.rs  traits.rs  variables.rs
rustinc/: Cargo.toml  rustinc.c  rustinc.h
rustinc/src/: lib.rs
snippets/: Cargo.toml  build.rs
snippets/src/: casting.rs  errror_handling.rs  ffi.rs  generics.rs  lib.rs  macros.rs  matching.rs  numpy.rs  print.rs  references.rs  safety.rs  variables.rs
