[package]
name = "rust_snippets"
version = "0.0.1"
edition = "2021"

[lib]
name = "rust_snippets"
crate-type = ["staticlib"] # or ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "generate-import-lib"] }
numpy = "0.20.0"
you-can = "0.0.14"
static_assertions = "1.1.0"
indoc = "2.0.4"
cc = "1.0.83"
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"

[build-dependencies]
cc = "1.0.83"