[package]
name = "rust_snippets"
version = "0.0.1"
edition = "2021"

[lib]
name = "rust_snippets"
crate-type = ["staticlib"] # or ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "generate-import-lib"], optional = true}
numpy = { version = "0.20.0", optional = true }
you-can = "0.0.14"
static_assertions = "1.1.0"
indoc = "2.0.4"
cc = { version = "1.0.83", optional = true }
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"

[build-dependencies]
cc = { version = "1.0.83", optional = true }

[features]
cc = ["dep:cc"]
python = ["dep:pyo3", "dep:numpy"]